docs(all): clean up formatting and wording
Sentence case headings, collapse bold inline-header lists into prose,
tighten wordy descriptions, trim filler phrases, fix link text casing.
Covers guides, error references, and the ADR template.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/docs/errors/GIT001.md
+++ b/docs/errors/GIT001.md
@@ -1,14 +1,14 @@
-# GIT001: Missing Signoff Flag
+# GIT001: Missing signoff flag
 
 ## Error
 
 Git commit is missing the `-s` or `--signoff` flag.
 
-## Why This Matters
+## Why this matters
 
 The signoff flag adds a `Signed-off-by` trailer to your commit message, certifying that you have the right to submit the code under the project's license (Developer Certificate of Origin).
 
-## How to Fix
+## How to fix
 
 Add the `-s` flag to your git commit command:
 
