--- a/docs/errors/GIT003.md
+++ b/docs/errors/GIT003.md
@@ -1,14 +1,14 @@
-# GIT003: No Files Staged for Commit
+# GIT003: No files staged for commit
 
 ## Error
 
-Attempting to commit with no files in the staging area.
+No files are staged, but a commit was attempted.
 
-## Why This Matters
+## Why this matters
 
-A commit without staged changes would be empty or might accidentally include unintended changes with the `-a` flag.
+An empty staging area means the commit either does nothing or, with `-a`, pulls in changes you didn't intend to include.
 
-## How to Fix
+## How to fix
 
 Stage your changes before committing:
 
@@ -49,4 +49,4 @@ check_staging_area = false
 
 ## Related
 
-- [GIT009](GIT009.md) - File Does Not Exist (for git add)
+- [GIT009](GIT009.md) - File does not exist (for git add)
