--- a/docs/errors/GIT004.md
+++ b/docs/errors/GIT004.md
@@ -1,16 +1,14 @@
-# GIT004: Commit Message Title Issues
+# GIT004: Commit message title issues
 
 ## Error
 
-The commit message title has formatting issues, typically exceeding the maximum length.
+The commit message title is too long or has formatting problems.
 
-## Why This Matters
+## Why this matters
 
-- Git log and GitHub truncate long titles, making them hard to read
-- Many tools expect titles under 50-72 characters
-- Concise titles improve readability in git history
+Git log, GitHub, and most tools truncate titles longer than 50-72 characters. Short titles are easier to scan in git history.
 
-## How to Fix
+## How to fix
 
 Keep your title under 50 characters (default):
 
