--- a/docs/errors/GIT005.md
+++ b/docs/errors/GIT005.md
@@ -1,16 +1,15 @@
-# GIT005: Commit Message Body Issues
+# GIT005: Commit message body issues
 
 ## Error
 
-The commit message body has formatting issues, typically lines exceeding the maximum length.
+One or more body lines exceed the maximum length.
 
-## Why This Matters
+## Why this matters
 
 - Git tools wrap or truncate long lines, breaking formatting
-- 72 characters is the standard for readable git logs
-- Consistent formatting improves collaboration
+- 72 characters is the widely adopted standard for readable git logs
 
-## How to Fix
+## How to fix
 
 Wrap body lines at 72 characters (default):
 
@@ -37,7 +36,7 @@ body_max_line_length = 100  # Default: 72
 body_line_tolerance = 5     # Additional tolerance (default: 5)
 ```
 
-The tolerance allows slightly longer lines (77 chars with defaults) before failing.
+With defaults, lines up to 77 characters pass before triggering a failure.
 
 ## Exceptions
 
