--- a/docs/errors/GIT006.md
+++ b/docs/errors/GIT006.md
@@ -1,16 +1,14 @@
-# GIT006: Incorrect Infrastructure Scope Usage
+# GIT006: Incorrect infrastructure scope usage
 
 ## Error
 
 Using `feat(ci)`, `fix(ci)`, `feat(test)`, or similar combinations where a user-facing type is paired with an infrastructure scope.
 
-## Why This Matters
+## Why this matters
 
-- `feat` and `fix` should describe user-facing changes
-- Infrastructure changes (CI, tests, docs) have their own types
-- This improves changelog clarity and semantic versioning
+`feat` and `fix` describe user-facing changes. Infrastructure changes (CI, tests, docs) have their own types. Mixing them muddies changelogs and breaks semantic versioning.
 
-## How to Fix
+## How to fix
 
 Use the infrastructure type as the primary type:
 
@@ -24,9 +22,9 @@ git commit -sS -m "ci(workflow): update deployment pipeline"
 git commit -sS -m "test(helpers): add authentication mock"
 ```
 
-## Type Reference
+## Type reference
 
-| Type       | Use For                          |
+| Type       | Use for                          |
 |:-----------|:---------------------------------|
 | `ci`       | CI/CD configuration changes      |
 | `test`     | Adding or modifying tests        |
