--- a/docs/errors/GIT008.md
+++ b/docs/errors/GIT008.md
@@ -1,14 +1,14 @@
-# GIT008: Missing Branch for Push
+# GIT008: Missing branch for push
 
 ## Error
 
 No branch specified for git push and the current branch doesn't track a remote branch.
 
-## Why This Matters
+## Why this matters
 
 Without an explicit branch, git may push to an unexpected location or fail with a confusing error.
 
-## How to Fix
+## How to fix
 
 Specify the branch explicitly:
 
@@ -26,7 +26,7 @@ git push -u origin feature-branch
 git push
 ```
 
-## Check Current Tracking
+## Check current tracking
 
 ```bash
 # Show branch tracking configuration:
@@ -35,4 +35,4 @@ git branch -vv
 
 ## Related
 
-- [GIT007](GIT007.md) - Remote Does Not Exist
+- [GIT007](GIT007.md) - Remote does not exist
