--- a/docs/errors/GIT009.md
+++ b/docs/errors/GIT009.md
@@ -1,14 +1,14 @@
-# GIT009: File Does Not Exist
+# GIT009: File does not exist
 
 ## Error
 
-Attempting to stage a file with `git add` that doesn't exist.
+You ran `git add` on a file that doesn't exist.
 
-## Why This Matters
+## Why this matters
 
-Staging non-existent files indicates a typo in the path or that the file was deleted/moved.
+This usually means a typo in the path, or the file was deleted or moved.
 
-## How to Fix
+## How to fix
 
 1. Verify the file path:
 
@@ -32,4 +32,4 @@ Staging non-existent files indicates a typo in the path or that the file was del
 
 ## Related
 
-- [GIT003](GIT003.md) - No Files Staged for Commit
+- [GIT003](GIT003.md) - No files staged for commit
