--- a/docs/errors/GIT010.md
+++ b/docs/errors/GIT010.md
@@ -1,19 +1,16 @@
-# GIT010: Missing Required Flags
+# GIT010: Missing required flags
 
 ## Error
 
-Git commit is missing one or more required flags (typically `-s` and `-S`).
+Git commit is missing required flags (typically `-s` and `-S`).
 
-## Why This Matters
+## Why this matters
 
-Required flags ensure:
+The `-s` (signoff) flag records Developer Certificate of Origin compliance. The `-S` (GPG sign) flag cryptographically verifies authorship. Both are required by default.
 
-- **Signoff (`-s`)**: Developer Certificate of Origin compliance
-- **GPG Sign (`-S`)**: Cryptographic verification of authorship
+## How to fix
 
-## How to Fix
-
-Include all required flags:
+Add the required flags:
 
 ```bash
 git commit -sS -m "message"
@@ -27,7 +24,7 @@ git commit --signoff --gpg-sign -m "message"
 
 ## Configuration
 
-Customize required flags in `config.toml`:
+Set which flags are required in `config.toml`:
 
 ```toml
 [validators.git.commit]
@@ -50,5 +47,5 @@ required_flags = []
 
 ## Related
 
-- [GIT001](GIT001.md) - Missing Signoff Flag (specific)
-- [GIT002](GIT002.md) - Missing GPG Sign Flag (specific)
+- [GIT001](GIT001.md) - Missing signoff flag
+- [GIT002](GIT002.md) - Missing GPG sign flag
