--- a/docs/errors/GIT011.md
+++ b/docs/errors/GIT011.md
@@ -1,16 +1,16 @@
-# GIT011: PR Reference in Commit Message
+# GIT011: PR reference in commit message
 
 ## Error
 
 Commit message contains a pull request reference (e.g., `#123` or `PR #456`).
 
-## Why This Matters
+## Why this matters
 
 - PR numbers should be in the PR body, not commit messages
 - Commit messages are permanent; PR numbers are repository-specific
 - References in commits become meaningless when rebased to other repos
 
-## How to Fix
+## How to fix
 
 Remove PR references from commit messages:
 
