--- a/docs/errors/GIT013.md
+++ b/docs/errors/GIT013.md
@@ -1,17 +1,14 @@
-# GIT013: Invalid Conventional Commit Format
+# GIT013: Invalid conventional commit format
 
 ## Error
 
 Commit message doesn't follow the conventional commits specification.
 
-## Why This Matters
+## Why this matters
 
-- Enables automated changelog generation
-- Supports semantic versioning automation
-- Improves git history readability
-- Standard format across the team
+Conventional commits let tools generate changelogs and bump versions automatically. They also keep git history readable and consistent across the team.
 
-## Expected Format
+## Expected format
 
 ```text
 type(scope): description
@@ -21,7 +18,7 @@ type(scope): description
 [optional footer(s)]
 ```
 
-## How to Fix
+## How to fix
 
 Use the correct format:
 
@@ -36,7 +33,7 @@ Tokens were expiring immediately due to timezone
 misconfiguration in the JWT library."
 ```
 
-## Valid Types
+## Valid types
 
 | Type       | Description                  |
 |:-----------|:-----------------------------|
@@ -77,5 +74,5 @@ require_scope = false
 
 ## Related
 
-- [GIT004](GIT004.md) - Title Issues
-- [GIT006](GIT006.md) - Infrastructure Scope Misuse
+- [GIT004](GIT004.md) - Title issues
+- [GIT006](GIT006.md) - Infrastructure scope misuse
