--- a/docs/errors/GIT014.md
+++ b/docs/errors/GIT014.md
@@ -1,16 +1,16 @@
-# GIT014: Forbidden Pattern in Commit Message
+# GIT014: Forbidden pattern in commit message
 
 ## Error
 
 Commit message contains a forbidden pattern (by default, references to `tmp/` directory).
 
-## Why This Matters
+## Why this matters
 
-- `tmp/` files are temporary and shouldn't be referenced in permanent commit history
-- Custom patterns can block sensitive or project-specific content
-- Prevents accidental exposure of debug paths or temporary workarounds
+- `tmp/` paths are transient and don't belong in permanent commit history
+- Custom patterns let you block project-specific or sensitive content
+- Catches debug paths and throwaway workarounds before they land in the log
 
-## How to Fix
+## How to fix
 
 Remove forbidden patterns from your commit message:
 
@@ -22,7 +22,7 @@ git commit -sS -m "fix(build): update path to tmp/cache"
 git commit -sS -m "fix(build): update cache path configuration"
 ```
 
-## Default Patterns
+## Default patterns
 
 - `\btmp/` - References to tmp/ directories
 - `\btmp\b` - Standalone "tmp" word
