--- a/docs/errors/GIT015.md
+++ b/docs/errors/GIT015.md
@@ -1,16 +1,14 @@
-# GIT015: Signoff Identity Mismatch
+# GIT015: Signoff identity mismatch
 
 ## Error
 
 The `Signed-off-by` trailer doesn't match the expected identity.
 
-## Why This Matters
+## Why this matters
 
-- Ensures commits are signed off by the correct identity
-- Prevents commits with incorrect author attribution
-- Enforces organizational identity policies
+The `Signed-off-by` trailer must match your configured git identity. If your organization enforces signoff policies, a mismatch means the commit won't pass validation.
 
-## How to Fix
+## How to fix
 
 1. Check your git configuration:
 
@@ -26,7 +24,7 @@ The `Signed-off-by` trailer doesn't match the expected identity.
    git config user.email "your.email@klaudiu.sh"
    ```
 
-3. Ensure the signoff matches:
+3. Confirm the signoff matches:
 
    ```bash
    # The -s flag uses your configured identity
