--- a/docs/errors/GIT016.md
+++ b/docs/errors/GIT016.md
@@ -1,18 +1,17 @@
-# GIT016: List Format Issues in Commit Body
+# GIT016: List format issues in commit body
 
 ## Error
 
-List items in the commit body don't follow proper Markdown formatting.
+List items in the commit body aren't formatted as valid Markdown.
 
-## Why This Matters
+## Why this matters
 
 - Lists need blank lines before them in Markdown
-- Improper formatting breaks rendering in GitHub/GitLab
-- Consistent formatting improves readability
+- Missing blank lines break rendering in GitHub and GitLab
 
-## How to Fix
+## How to fix
 
-Add empty lines before lists:
+Add blank lines before lists:
 
 ```bash
 # Wrong:
@@ -30,7 +29,7 @@ Changes:
 - Added auth endpoint"
 ```
 
-## Markdown Rules
+## Markdown rules
 
 1. Blank line after the title
 2. Blank line before any list
