--- a/docs/errors/GIT017.md
+++ b/docs/errors/GIT017.md
@@ -1,17 +1,14 @@
-# GIT017: PR Merge Message Validation Failed
+# GIT017: PR merge message validation failed
 
 ## Error
 
 PR title or body doesn't follow commit message conventions for squash merge.
 
-## Why This Matters
+## Why this matters
 
-- Squash merge uses PR title + body as the commit message
-- Invalid PR messages bypass direct commit validation
-- Maintains commit history quality in main branch
-- Ensures all commits follow conventional commit standards
+Squash merge uses the PR title and body as the final commit message. If the PR message doesn't follow conventions, it bypasses the commit validation that normally enforces them, degrading commit history on the main branch.
 
-## Common Causes
+## Common causes
 
 - PR title exceeds 50 characters
 - PR title doesn't follow `type(scope): description` format
@@ -19,11 +16,11 @@ PR title or body doesn't follow commit message conventions for squash merge.
 - Using `feat(ci)` or `fix(test)` instead of `ci(...)` or `test(...)`
 - PR body contains forbidden patterns
 
-## How to Fix
+## How to fix
 
-### Fix PR Title
+### Fix PR title
 
-Ensure title follows conventional commits format:
+The title must follow conventional commits format:
 
 ```bash
 # Good:
@@ -37,9 +34,9 @@ This is a very long title that exceeds the fifty character limit
 Added some changes  # Missing type and scope
 ```
 
-### Fix PR Body
+### Fix PR body
 
-Ensure body lines respect 72 character limit:
+Keep body lines within the 72 character limit:
 
 ```bash
 gh pr edit <number> --body "Short summary line.
@@ -50,7 +47,7 @@ Each line should not exceed this limit.
 More details here."
 ```
 
-### Add to Merge Command
+### Add to merge command
 
 Provide body via `--body` flag:
 
@@ -67,7 +64,7 @@ EOF
 
 ## Configuration
 
-Configure merge message validation:
+Merge message validation settings:
 
 ```toml
 [validators.git.merge.message]
@@ -79,14 +76,14 @@ require_scope = true
 block_infra_scope_misuse = true
 ```
 
-Disable merge message validation:
+To disable merge message validation:
 
 ```toml
 [validators.git.merge.message]
 enabled = false
 ```
 
-Allow longer titles for reverts:
+To allow longer titles for reverts:
 
 ```toml
 [validators.git.merge.message]
