--- a/docs/errors/GIT018.md
+++ b/docs/errors/GIT018.md
@@ -1,21 +1,18 @@
-# GIT018: PR Merge Signoff Missing
+# GIT018: PR merge signoff missing
 
 ## Error
 
-The merge commit body is missing the required `Signed-off-by` trailer.
+The merge commit body has no `Signed-off-by` trailer.
 
-## Why This Matters
+## Why this matters
 
-- Ensures Developer Certificate of Origin (DCO) compliance
-- Maintains author attribution for squash merge commits
-- Enforces organizational signing policies
-- All commits must be properly signed off
+The `Signed-off-by` trailer ties a commit to an identity, which matters for DCO compliance and author attribution on squash merges. Some organizations require it on every commit.
 
-## How to Fix
+## How to fix
 
-### Add Signoff When Merging
+### Add signoff when merging
 
-Include signoff in the `--body` flag when merging:
+Pass the signoff in the `--body` flag:
 
 ```bash
 gh pr merge <number> --squash --body "$(cat <<'EOF'
@@ -28,9 +25,9 @@ EOF
 )"
 ```
 
-### Check Your Git Identity
+### Check your git identity
 
-Ensure your git identity is configured correctly:
+Confirm your name and email are set:
 
 ```bash
 git config user.name
@@ -53,23 +50,23 @@ Require signoff for merge commits:
 require_signoff = true
 ```
 
-Disable signoff requirement:
+Disable the signoff requirement:
 
 ```toml
 [validators.git.merge]
 require_signoff = false
 ```
 
-Specify expected signoff identity:
+Pin the expected signoff identity:
 
 ```toml
 [validators.git.merge]
 expected_signoff = "Your Name <your.email@klaudiu.sh>"
 ```
 
-## Common Patterns
+## Examples
 
-### Full PR Merge with Signoff
+### Squash merge with signoff
 
 ```bash
 gh pr merge 123 --squash --body "$(cat <<'EOF'
@@ -85,7 +82,7 @@ EOF
 )"
 ```
 
-### Auto-merge with Signoff
+### Auto-merge with signoff
 
 ```bash
 gh pr merge 123 --auto --squash --body "$(cat <<'EOF'
@@ -100,6 +97,6 @@ EOF
 
 ## Related
 
-- [GIT001](GIT001.md) - Missing Signoff Flag
-- [GIT015](GIT015.md) - Signoff Identity Mismatch
-- [GIT017](GIT017.md) - PR Merge Message Validation
+- [GIT001](GIT001.md) - missing signoff flag
+- [GIT015](GIT015.md) - signoff identity mismatch
+- [GIT017](GIT017.md) - PR merge message validation
