--- a/docs/errors/SEC001.md
+++ b/docs/errors/SEC001.md
@@ -1,19 +1,16 @@
-# SEC001: API Key Detected
+# SEC001: API key detected
 
 ## Error
 
-Detected what appears to be an API key or service credential in the code.
+Found an API key or service credential in the code.
 
-## Why This Matters
+## Why this matters
 
-- API keys grant access to paid services and resources
-- Exposed keys can be scraped from git history
-- Attackers actively scan public repositories for credentials
-- Keys can be used for financial theft or service abuse
+API keys grant access to paid services. Once committed, keys stay in git history where attackers can find them. Leaked keys lead to unauthorized access, financial charges, or service abuse.
 
-## Detected Patterns
+## Detected patterns
 
-This error is triggered by:
+Triggers on:
 
 - AWS Access Key IDs (`AKIA...`)
 - AWS Secret Access Keys
@@ -27,28 +24,28 @@ This error is triggered by:
 - Azure Storage Account Keys
 - Generic secret/api_key assignments
 
-## How to Fix
+## How to fix
 
-1. **Remove the key from code immediately**
+1. Remove the key from code immediately.
 
-2. **Use environment variables:**
+2. Use environment variables:
 
    ```go
    apiKey := os.Getenv("SERVICE_API_KEY")
    ```
 
-3. **Use secret management services:**
+3. Use a secret management service:
    - AWS Secrets Manager
    - HashiCorp Vault
    - GCP Secret Manager
    - Azure Key Vault
    - 1Password Secrets Automation
 
-4. **Rotate compromised keys** - If the key was ever committed, treat it as compromised and rotate it.
+4. Rotate the key. If it was ever committed, treat it as compromised.
 
 ## Configuration
 
-Add to allow list if this is a test key or false positive:
+Allow list for test keys or false positives:
 
 ```toml
 [validators.secrets]
@@ -58,7 +55,7 @@ allow_list = [
 ]
 ```
 
-Disable specific patterns:
+Disable a pattern:
 
 ```toml
 [validators.secrets]
