--- a/docs/errors/SEC002.md
+++ b/docs/errors/SEC002.md
@@ -1,19 +1,16 @@
-# SEC002: Hardcoded Password Detected
+# SEC002: Hardcoded password detected
 
 ## Error
 
-Detected what appears to be a hardcoded password in the code.
+A hardcoded password was found in the code.
 
-## Why This Matters
+## Why this matters
 
-- Passwords in code are visible to anyone with repository access
-- Git history preserves passwords even after removal
-- Shared passwords violate security best practices
-- Credential reuse puts multiple systems at risk
+Anyone with repository access can see passwords stored in code. Git history preserves them even after you delete them. Hardcoded passwords also tend to get reused across systems, so one leak can compromise several services.
 
-## Detected Patterns
+## Detected patterns
 
-This error is triggered by patterns like:
+Patterns that trigger this error:
 
 ```text
 password = "secret123"
@@ -21,27 +18,24 @@ passwd: 'mypassword'
 pwd='admin123'
 ```
 
-## How to Fix
+## How to fix
 
-1. **Never hardcode passwords**
+1. Never hardcode passwords.
 
-2. **Use environment variables:**
+2. Read them from environment variables:
 
    ```go
    dbPassword := os.Getenv("DB_PASSWORD")
    ```
 
-3. **Use configuration files (excluded from git):**
+3. Store them in configuration files excluded from git:
 
    ```yaml
    # .env (in .gitignore)
    DB_PASSWORD=secure_password_here
    ```
 
-4. **Use secret injection at runtime:**
-   - Kubernetes Secrets
-   - Docker secrets
-   - CI/CD secret variables
+4. Inject secrets at runtime through Kubernetes Secrets, Docker secrets, or CI/CD secret variables.
 
 ## Configuration
 
@@ -64,5 +58,5 @@ disabled_patterns = ["generic-password"]
 
 ## Related
 
-- [SEC001](SEC001.md) - API Key Detected
-- [SEC005](SEC005.md) - Connection String Detected
+- [SEC001](SEC001.md) -- API key detected
+- [SEC005](SEC005.md) -- Connection string detected
