--- a/docs/errors/SEC003.md
+++ b/docs/errors/SEC003.md
@@ -1,58 +1,48 @@
-# SEC003: Private Key Detected
+# SEC003: Private key detected
 
 ## Error
 
 Detected a private key in the code.
 
-## Why This Matters
+## Why this matters
 
-- Private keys enable impersonation and decryption
-- SSH keys grant server access
-- PGP keys can forge signatures
-- TLS keys compromise encrypted communications
-- Key exposure requires immediate rotation
+Private keys enable impersonation and decryption. SSH keys grant server access, PGP keys can forge signatures, and TLS keys compromise encrypted communications. Any exposure requires immediate rotation.
 
-## Detected Patterns
+## Detected patterns
 
-This error is triggered by:
+Matches these PEM header lines:
 
-- RSA Private Keys (`-----BEGIN RSA PRIVATE KEY-----`)
-- DSA Private Keys (`-----BEGIN DSA PRIVATE KEY-----`)
-- EC Private Keys (`-----BEGIN EC PRIVATE KEY-----`)
-- OpenSSH Private Keys (`-----BEGIN OPENSSH PRIVATE KEY-----`)
-- PGP Private Key Blocks (`-----BEGIN PGP PRIVATE KEY BLOCK-----`)
+- RSA private keys (`-----BEGIN RSA PRIVATE KEY-----`)
+- DSA private keys (`-----BEGIN DSA PRIVATE KEY-----`)
+- EC private keys (`-----BEGIN EC PRIVATE KEY-----`)
+- OpenSSH private keys (`-----BEGIN OPENSSH PRIVATE KEY-----`)
+- PGP private key blocks (`-----BEGIN PGP PRIVATE KEY BLOCK-----`)
 
-## How to Fix
+## How to fix
 
-1. **Remove the key from the repository immediately**
+1. Remove the key from the repository immediately.
 
-2. **Store keys securely:**
-   - Use SSH agent or keychain
-   - Store in encrypted vaults
-   - Use cloud KMS for encryption keys
+2. Store keys outside the repo -- use SSH agent, an encrypted vault, or cloud KMS.
 
-3. **Use environment-based key loading:**
+3. Load keys from the environment at runtime:
 
    ```go
    keyPath := os.Getenv("PRIVATE_KEY_PATH")
    key, err := os.ReadFile(keyPath)
    ```
 
-4. **Rotate compromised keys:**
-   - Generate new keys
-   - Update all systems using the old key
-   - Revoke the old key
+4. If the key was exposed, rotate it: generate a new key, update all systems that use the old one, then revoke it.
 
 ## Configuration
 
-If the key is for testing (e.g., in test fixtures):
+To skip detection for test fixtures, disable the pattern:
 
 ```toml
 [validators.secrets]
 disabled_patterns = ["private-key-rsa"]
 ```
 
-Or allow specific test key patterns:
+Or allow specific test key filenames:
 
 ```toml
 [validators.secrets]
@@ -62,9 +52,9 @@ allow_list = [
 ]
 ```
 
-## Git History Cleanup
+## Git history cleanup
 
-If a key was committed, use git-filter-repo to remove it:
+If a key was already committed, strip it from history with git-filter-repo:
 
 ```bash
 git filter-repo --invert-paths --path path/to/private.key
