--- a/docs/errors/SEC005.md
+++ b/docs/errors/SEC005.md
@@ -1,19 +1,16 @@
-# SEC005: Connection String with Credentials Detected
+# SEC005: Connection string with credentials detected
 
 ## Error
 
-Detected a database connection string containing embedded credentials.
+A database connection string contains credentials.
 
-## Why This Matters
+## Why this matters
 
-- Connection strings expose both location and credentials
-- Database access enables data theft or destruction
-- Credentials often grant broader access than intended
-- Connection strings in logs create additional exposure
+Connection strings expose both the server location and the credentials to reach it. Anyone who gets the string can connect directly, read or destroy data, and often reach more than just the target database. If the string ends up in logs or version history, the exposure spreads further.
 
-## Detected Patterns
+## Detected patterns
 
-This error is triggered by:
+klaudiush flags these URI schemes when they include a username and password:
 
 - MongoDB: `mongodb://user:pass@host/db`
 - MongoDB+SRV: `mongodb+srv://user:pass@host/db`
@@ -21,15 +18,15 @@ This error is triggered by:
 - MySQL: `mysql://user:pass@host/db`
 - Redis: `redis://user:pass@host/db`
 
-## How to Fix
+## How to fix
 
-1. **Use environment variables for the full connection string:**
+1. Read the full connection string from an environment variable:
 
    ```go
    connStr := os.Getenv("DATABASE_URL")
    ```
 
-2. **Or compose from separate environment variables:**
+2. Or build it from separate variables:
 
    ```go
    host := os.Getenv("DB_HOST")
@@ -38,10 +35,7 @@ This error is triggered by:
    connStr := fmt.Sprintf("postgres://%s:%s@%s/mydb", user, pass, host)
    ```
 
-3. **Use IAM-based authentication:**
-   - AWS RDS IAM authentication
-   - GCP Cloud SQL IAM
-   - Azure AD authentication
+3. Use IAM-based authentication where your provider supports it (AWS RDS, GCP Cloud SQL, Azure AD).
 
 ## Configuration
 
@@ -56,14 +50,11 @@ allow_list = [
 ]
 ```
 
-## Best Practices
+## Best practices
 
-- Use connection pooling services (PgBouncer, ProxySQL)
-- Implement database credential rotation
-- Use read-only credentials where possible
-- Enable TLS for database connections
+Use connection pooling (PgBouncer, ProxySQL), rotate database credentials on a schedule, prefer read-only credentials when writes aren't needed, and enable TLS on every connection.
 
 ## Related
 
-- [SEC001](SEC001.md) - API Key Detected
-- [SEC002](SEC002.md) - Hardcoded Password Detected
+- [SEC001](SEC001.md) - API key detected
+- [SEC002](SEC002.md) - Hardcoded password detected
