--- a/docs/errors/GIT002.md
+++ b/docs/errors/GIT002.md
@@ -1,14 +1,14 @@
-# GIT002: Missing GPG Sign Flag
+# GIT002: Missing GPG signing flag
 
 ## Error
 
 Git commit is missing the `-S` or `--gpg-sign` flag.
 
-## Why This Matters
+## Why this matters
 
-GPG signing verifies your identity as the commit author, protecting against impersonation and ensuring code authenticity in the version control history.
+GPG signing proves you authored the commit. Without it, anyone can claim to be you in the git history.
 
-## How to Fix
+## How to fix
 
 Add the `-S` flag to your git commit command:
 
@@ -48,5 +48,5 @@ required_flags = ["-s"]  # Only require signoff, not GPG signing
 
 ## Related
 
-- [GIT001](GIT001.md) - Missing Signoff Flag
-- [GIT010](GIT010.md) - Missing Required Flags (combined)
+- [GIT001](GIT001.md) - Missing signoff flag
+- [GIT010](GIT010.md) - Missing required flags
