--- a/docs/errors/SEC004.md
+++ b/docs/errors/SEC004.md
@@ -1,19 +1,16 @@
-# SEC004: Token Detected
+# SEC004: Token detected
 
 ## Error
 
-Detected what appears to be an authentication token in the code.
+Found an authentication token in the code.
 
-## Why This Matters
+## Why this matters
 
-- Tokens provide authenticated access to services
-- Many tokens have broad permissions
-- Exposed tokens are actively exploited by attackers
-- Tokens in git history remain recoverable
+Tokens grant authenticated access to services, and many carry broad permissions. Attackers actively scan for exposed tokens. Once a token lands in git history, it stays recoverable even after deletion.
 
-## Detected Patterns
+## Detected patterns
 
-This error is triggered by:
+Triggers on:
 
 - GitHub Personal Access Tokens (`ghp_...`)
 - GitHub OAuth Tokens (`gho_...`)
@@ -25,22 +22,22 @@ This error is triggered by:
 - NPM Tokens (`npm_...`)
 - JSON Web Tokens (JWTs)
 
-## How to Fix
+## How to fix
 
-1. **Remove the token immediately**
+1. Remove the token immediately
 
-2. **Revoke the compromised token:**
+2. Revoke the compromised token:
    - GitHub: Settings > Developer settings > Personal access tokens
    - GitLab: Settings > Access Tokens
    - Slack: App settings > OAuth & Permissions
 
-3. **Use environment variables:**
+3. Use environment variables:
 
    ```go
    token := os.Getenv("GITHUB_TOKEN")
    ```
 
-4. **Use credential helpers:**
+4. Use credential helpers:
 
    ```bash
    # For git credentials
@@ -59,14 +56,14 @@ allow_list = [
 ]
 ```
 
-## Best Practices
+## Best practices
 
-- Use short-lived tokens when possible
-- Apply minimum necessary permissions
-- Use OAuth apps over personal tokens
-- Implement token rotation policies
+- Prefer short-lived tokens
+- Grant only the permissions you need
+- Prefer OAuth apps over personal tokens
+- Rotate tokens on a schedule
 
 ## Related
 
-- [SEC001](SEC001.md) - API Key Detected
-- [SEC003](SEC003.md) - Private Key Detected
+- [SEC001](SEC001.md) - API key detected
+- [SEC003](SEC003.md) - Private key detected
